Communicating with fragments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".FlexibleActivity"/>
+        <activity android:name=".FlexibleActivity" />
+        <activity
+            android:name=".Communicating"
+            android:label="@string/title_activity_communicating"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
